--- a/SolvedLab.ipynb
+++ b/SolvedLab.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -67,22 +67,22 @@
     "engine = create_engine(connection_string)\n",
     "\n",
     "def rentals_month(engine, month, year):\n",
-    "    query = text(f\"\"\"\n",
+    "    query = text(\"\"\"\n",
     "        SELECT * FROM rental\n",
     "        WHERE MONTH(rental_date) = :month AND YEAR(rental_date) = :year\n",
     "    \"\"\")\n",
     "    with engine.connect() as connection:\n",
-    "        result = connection.execute(query, month=month, year=year)\n",
+    "        result = connection.execute(query.bindparams(month=month, year=year))\n",
     "        return pd.DataFrame(result.fetchall(), columns=result.keys())\n",
     "\n",
-    "def rentals_month(engine, month, year):\n",
-    "    query = text(\"\"\"\n",
-    "        SELECT * FROM rental\n",
-    "        WHERE MONTH(rental_date) = :month AND YEAR(rental_date) = :year\n",
-    "    \"\"\").bindparams(bindparam('month'), bindparam('year'))\n",
-    "    with engine.connect() as connection:\n",
-    "        result = connection.execute(query, {'month': month, 'year': year})\n",
-    "        return pd.DataFrame(result.fetchall(), columns=result.keys())\n",
+    "def rental_count_month(df, month, year):\n",
+    "    # Nombre de la columna basado en el mes y el año\n",
+    "    column_name = f'rentals_{str(month).zfill(2)}_{year}'\n",
+    "    \n",
+    "    # Agrupar por customer_id y contar los alquileres\n",
+    "    rentals_per_customer = df.groupby('customer_id').size().reset_index(name=column_name)\n",
+    "    \n",
+    "    return rentals_per_customer\n",
     "    \n",
     "def compare_rentals(may_rental_counts, june_rental_counts):\n",
     "    comparison = may_rental_counts.merge(june_rental_counts, on='customer_id', how='outer', suffixes=('_may', '_june')).fillna(0)\n",
